k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-bank
  labels:
    app.kubernetes.io/part-of: my-bank
